--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,5 +2,6 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.github.mat127.septik.MainActivity">
+    <item android:title="@string/action_addState" app:showAsAction="never" android:id="@+id/action_addState"/>
     <item android:title="@string/action_addEmptyDate" android:id="@+id/action_addEmptyDate" app:showAsAction="never"/>
 </menu>
