--- a/app/src/main/res/layout/fragment_add_empty.xml
+++ b/app/src/main/res/layout/fragment_add_empty.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content" android:id="@+id/button_ok"
             app:layout_constraintTop_toBottomOf="@+id/chipTime" android:layout_marginTop="16dp"
             app:layout_constraintStart_toEndOf="@+id/button_cancel" android:layout_marginStart="32dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"/>
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
+            app:layout_constraintHorizontal_bias="1.0"/>
     <Button
             android:text="@android:string/cancel"
             android:layout_width="wrap_content"
