--- a/app/src/main/res/layout/fragment_add_state.xml
+++ b/app/src/main/res/layout/fragment_add_state.xml
@@ -32,9 +32,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/button_ok2"
             app:layout_constraintTop_toBottomOf="@+id/editTextState"
-            app:layout_constraintStart_toEndOf="@+id/button_cancel"
+            app:layout_constraintStart_toEndOf="@+id/button_cancel2"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="32dp" android:layout_marginTop="16dp"/>
+            android:layout_marginEnd="32dp" android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="1.0"
+            android:layout_marginStart="32dp"/>
     <Button
             android:text="@android:string/cancel"
             android:layout_width="wrap_content"
