--- a/app/src/main/res/layout/fragment_add_state.xml
+++ b/app/src/main/res/layout/fragment_add_state.xml
@@ -20,13 +20,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chipStateDate"/>
-    <EditText
+    <TextView
+            android:text="@string/state"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content" app:layout_constraintEnd_toStartOf="@+id/editTextState"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="@+id/editTextState"
+            app:layout_constraintTop_toBottomOf="@+id/chipStateTime" android:id="@+id/textView4"
+            android:layout_marginStart="8dp"/>
+    <EditText
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
             android:ems="10"
             android:id="@+id/editTextState" app:layout_constraintTop_toBottomOf="@+id/chipStateTime"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"/>
     <Button
             android:text="@android:string/ok"
             android:layout_width="wrap_content"
