--- a/app/src/main/res/layout/fragment_current_state.xml
+++ b/app/src/main/res/layout/fragment_current_state.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CurrentStateFragment">
+        tools:context=".ui.CurrentStateFragment">
     <TextView
             android:text="5.23m³"
             android:layout_width="wrap_content"
