--- a/app/src/main/res/layout/fragment_current_state.xml
+++ b/app/src/main/res/layout/fragment_current_state.xml
@@ -6,21 +6,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.CurrentStateFragment">
-    <TextView
-            android:text="5.23m³"
+    <LinearLayout
+            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView_fullness"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"/>
-    <TextView
-            android:text="56%"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView_fullnessPercent"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-            app:layout_constraintTop_toBottomOf="@id/textView_fullness"/>
+            android:id="@+id/linearLayout2" android:gravity="center_horizontal"
+            app:layout_constraintTop_toTopOf="parent">
+        <TextView
+                android:text="56%"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_fullnessPercent"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:layout_marginTop="16dp"
+        />
+        <TextView
+                android:text="23 dní"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView_fullDays"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        />
+        <TextView
+                android:text="1.1.2023"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView_fullDate"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textAlignment="center"/>
+    </LinearLayout>
     <ProgressBar
             style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
             android:layout_width="0dp"
@@ -29,40 +41,5 @@
             app:layout_constraintStart_toStartOf="parent"
             android:max="100" android:progress="32"
             android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
-            app:layout_constraintTop_toBottomOf="@id/textView_fullnessPercent" android:layout_marginTop="32dp"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/next_full_date"
-            android:id="@+id/textView"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintTop_toBottomOf="@id/progressBar_fullness"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="32dp"/>
-    <TextView
-            android:text="1.1.2023"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView_fullDate"
-            app:layout_constraintTop_toBottomOf="@id/textView"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/in_days"
-            android:id="@+id/textView2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintTop_toBottomOf="@id/textView_fullDate"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"/>
-    <TextView
-            android:text="23 dní"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView_fullDays"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/textView2"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
-    />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginTop="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
