--- a/app/src/main/res/layout/fragment_costs.xml
+++ b/app/src/main/res/layout/fragment_costs.xml
@@ -79,4 +79,81 @@
                     android:layout_weight="1" android:gravity="center_vertical|end"/>
         </TableRow>
     </TableLayout>
+    <TextView
+            android:text="@string/title_water_consumption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/textView2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+            android:layout_marginTop="16dp"/>
+    <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/round_rect_shape"
+            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
+            android:padding="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="8dp">
+
+        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+            <TextView
+                    android:text="@string/label_consumption_per_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
+                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
+            <TextView
+                    android:text="12 m³/den"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:gravity="center_vertical|end" android:layout_weight="1"
+                    android:id="@+id/textView_waterConsumptionPerDay"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+            <TextView
+                    android:text="@string/label_water_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
+                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
+            <TextView
+                    android:text="2312 Kč"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:gravity="center_vertical|end" android:layout_weight="1"
+                    android:id="@+id/textView_waterPrice"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+            <TextView
+                    android:text="@string/label_empting_price_per_year"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
+                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
+            <TextView
+                    android:text="28231 Kč"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_weight="1" android:gravity="center_vertical|end"
+                    android:id="@+id/textView_waterPricePerYear"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
+            <TextView
+                    android:text="@string/label_empting_price_per_month"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textAlignment="textEnd"
+                    android:paddingHorizontal="4dp" android:paddingVertical="4dp"/>
+            <TextView
+                    android:text="523 Kč"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:layout_weight="1" android:gravity="center_vertical|end"
+                    android:id="@+id/textView_waterPricePerMonth"/>
+        </TableRow>
+    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
