--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,6 +20,5 @@
     <fragment
             android:id="@+id/navigation_settings"
             android:name="com.github.mat127.septik.ui.settings.SettingsFragment"
-            android:label="@string/title_settings"
-            tools:layout="@layout/fragment_settings"/>
+            android:label="@string/title_settings"/>
 </navigation>
