--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -5,7 +5,7 @@
             app:title="@string/septik_header">
 
         <EditTextPreference
-                app:key="volume"
+                app:key="@string/preference_key_volume"
                 app:title="@string/volume_title"
                 app:useSimpleSummaryProvider="true" app:defaultValue="11"/>
 
@@ -15,12 +15,12 @@
             app:title="@string/costs_header">
 
         <EditTextPreference
-                app:key="water_price"
+                app:key="@string/preference_key_water_price"
                 app:title="@string/water_price_title"
                 app:useSimpleSummaryProvider="true" app:defaultValue="50,5" android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <EditTextPreference
-                app:key="empting_price"
+                app:key="@string/preference_key_empting_price"
                 app:title="@string/empting_price_title"
                 app:useSimpleSummaryProvider="true" app:defaultValue="2475" android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
