--- a/app/src/main/res/layout/fragment_current_state.xml
+++ b/app/src/main/res/layout/fragment_current_state.xml
@@ -9,11 +9,12 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="wrap_content"
             android:id="@+id/linearLayout2" android:gravity="center_horizontal"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/tableLayout">
+            app:layout_constraintTop_toTopOf="@+id/progressBar_fullness"
+            app:layout_constraintBottom_toBottomOf="@+id/progressBar_fullness"
+            app:layout_constraintStart_toStartOf="@+id/progressBar_fullness"
+            app:layout_constraintEnd_toEndOf="@+id/progressBar_fullness">
         <TextView
                 android:text="56%"
                 android:layout_width="wrap_content"
@@ -35,15 +36,17 @@
                 android:textAlignment="center"/>
     </LinearLayout>
     <ProgressBar
-            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:id="@+id/progressBar_fullness" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:max="100" android:progress="32"
             android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
+            android:indeterminate="false"
+            android:progressDrawable="@drawable/circular_progress_bar" android:background="@drawable/circle_shape"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+    />
     <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
